add mobile version

--- a/src/index.css
+++ b/src/index.css
@@ -24,9 +24,9 @@ body {
     background-image: url('/src/logos/lens_flare.jpg') ;
     }
 
-  .small-button{
+  /* .small-button{
     background: url('/src/logos/Rectangle\ 5.png') no-repeat;
-    }
+    } */
   
   .large{
     background-image: url('/src/logos/Rectangle\ 1.png');
