--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,17 @@
 @import "~bootstrap/scss/bootstrap";
 
+.main{
+  max-width: 1800px;
+   background-size: cover;
+   background-attachment: fixed;
+ }
+
   .navbar{
     background-color: #00355A;
   }
   
   .logo{
-    width: 440px;
+    width: 40%;
     height: 132px;
     background-size: cover;
     background-size: 100% 100%;
@@ -13,13 +19,13 @@
   
   .first-section{
     width: 100%;
-    height: 100vh;
     background-size: cover;
     background-size: 100% 100%;
     padding-top: 2%;
     padding-left: 5%;
     top: 300px;
     margin-top: 130px;
+    padding-top: 7%;
 
   
     h1 {
@@ -30,46 +36,22 @@
     
       p {
         font-size: 22px;
-        margin-bottom: 70px;
+        margin-bottom: 60px;
         font-weight: 500;
         color: white;
       }
   }
-  .large{
-    margin-top:-50px;
-    background-size: cover;
-    width: 460px;
-    height: 180px;
-    margin-left: -20%;
-    transition: 0.5s;
-    margin-bottom: -70px;
-}
-
-  .large-button{
-    cursor:pointer;
-    font-size: 32px;
-    transition: 0.5s;
-    width: 500px;
-    height: 130px;
-    padding-top: 70px;
-    background-color: transparent;
-    padding-bottom: 20px;
-    border: none;
-  }
-
-  .large:hover{
-    transition: 0.5s;
-    transform: scale(1.1);
-}
 
   .small-button{
     cursor:pointer;
     font-size: 25px;
     transition: 0.5s;
-    width: 298px;
-    height: 127px;
-    background-size: 100% 100%;
-    border: none;
+    background-color: #63676a;
+    border-radius: 25%;
+    width: 17%;
+    height: 6%;
+    margin: 2px;
+    margin-bottom: 60px;
   }
 
   .small-button:hover{
@@ -77,19 +59,22 @@
     transform: scale(1.1);
 }
 
-.main{
-    width: 100%;
-    background-size: cover;
-    background-attachment: fixed;}
+@media only screen   
+and (max-device-width : 830px) {
+  .small-button{
+      display:block;
+      width: 35%;
+      margin: 1px;
+      font-size: 100%;
+   }
+}
+
 
 .second-section{
   width: 100%;
-  height: 100vh;
-  background-size: cover;
-  background-size: 100% 100%;
+  top: 300px;
   padding-top: 4%;
   padding-left: 5%;
-  top: 300px;
 
 
   h1 {
@@ -111,15 +96,59 @@
 }
 
 .second-page-buttons{
-    margin-bottom: -40px;
+width: 50%;
+height:10%;
+margin: 15px 55px;
 }
 
-.btns{
-    margin-left:-250px ;
+.mobile-btns{
+width: 100%;
+height:30%;
+margin: 10px;
+display: none;
+}
+
+@media only screen   
+and (max-device-width : 1350px) {
+  .second-page-buttons{
+ display: none;
+   }
+   .mobile-btns{
+     display: block;
+   }
+   .large{
+     display: none;
+   }
+}
+
+.large{
+  margin-top:-50px;
+  background-size: cover;
+  width: 460px;
+  height: 180px;
+  margin-left: -20%;
+  transition: 0.5s;
+  margin-bottom:0;
+}
+
+.large-button{
+  cursor:pointer;
+  font-size: 32px;
+  transition: 0.5s;
+  width: 500px;
+  height: 130px;
+  padding-top: 70px;
+  background-color: transparent;
+  padding-bottom: 20px;
+  border: none;
+}
+
+.large:hover{
+  transition: 0.5s;
+  transform: scale(1.1);
 }
 
 .third-section{
-    height: 120vh;
     background-size: cover;
     padding: 76px;
     color: hsl(0, 0%, 100%);
@@ -141,8 +170,19 @@
 }
 
 .btn{
-    margin-top: -10px;
+    margin-top: -5px;
     width: 650px;
     height: 180px;
-    margin-left: -240px;
+    margin-left: 0;
+}
+
+@media only screen   
+and (max-device-width : 1350px) {
+  .web{
+      display: none;
+   }
+     .mobile-btns{
+     display: block;
+   }
+
 }
